--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -1011,6 +1011,14 @@ section {
   transition: 0.4s;
   border-radius: 50px;
 }
+#loginbtn{
+  background: #ffb03b;
+  border: 0;
+  padding: 10px 24px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 50px;
+}
 .book-a-table .php-email-form button[type=submit]:hover {
   background: #ffa012;
 }
