--- a/webapp/assets/css/style.css
+++ b/webapp/assets/css/style.css
@@ -977,6 +977,16 @@ section {
   transition: 0.4s;
   border-radius: 50px;
 }
+.deletebtn{
+  background: #ffb03b;
+  border: 0;
+  padding: 10px 24px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 50px;
+
+}
+
 .book-a-table .php-email-form button[type=submit]:hover {
   background: #ffa012;
 }
